--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Ember.js</title>
-	<link rel="stylesheet" href="">
+	<title>Ember.js • TodoMVC</title>
+	<link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <!--[if IE]>
+      <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <![endif]-->
 </head>
+
+<!-- END OF HEAD'r -->
+
 <body>
+
+	<!-- START OF HEADER -->
+
+	<section id="todoapp">
+		<header id="header">
+			<h1>todos</h1>
+			<input type="text" id="new-todo" placeholder="What needs to be done?" />
+		</header><!-- /header -->
+	</section>
+
+	<!-- END OF HEADER -->
+
+	<!-- START OF BODY -->
+
+	<section id="main">
+
+	<ul id="todo-list">
+		<li class="completed">
+			<input type="checkbox" class="toggle">
+			<label>Learn Ember.js</label><button class="destroy"></button>
+		</li>
+	</ul>
+
+	</section>
+
 
 </body>
 </html>
