--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 			<input type="checkbox" class="toggle">
 			<label>Learn Ember.js</label><button class="destroy"></button>
 		</li>
+
+		<li>
+			<input type="checkbox" class="toggle">
+			<label>…</label><button class="destroy"></button>
+		</li>
+
+		<li>
+			<input type="checkbox" class="toggle">
+			<label>Profit</label><button class="destroy"></button>
+		</li>
+
 	</ul>
 
 	</section>
