--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ember.js • TodoMVC</title>
-	<link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
   <!--[if IE]>
       <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
@@ -15,18 +15,20 @@
 
 <body>
 
+<!-- START OF APP -->
+<section id="todoapp">
 	<!-- START OF HEADER -->
 
-	<section id="todoapp">
+
 		<header id="header">
 			<h1>todos</h1>
 			<input type="text" id="new-todo" placeholder="What needs to be done?" />
 		</header><!-- /header -->
-	</section>
+
 
 	<!-- END OF HEADER -->
 
-	<!-- START OF BODY -->
+	<!-- START OF main -->
 
 	<section id="main">
 
@@ -48,8 +50,43 @@
 
 	</ul>
 
+		<input type="checkbox" id="toggle-all">
 	</section>
 
+	<!-- END OF MAIN -->
 
-</body>
-</html>
+	<!-- START OF FOOTER -->
+
+	<footer id="footer">
+		<span id-="todo-count">
+			<strong>2</strong> todos left
+		</span>
+		<ul id="filters">
+			<li>
+				<a href="all" class="selected">All</a>
+			</li>
+			<li>
+				<a href="active">Active</a>
+			</li>
+			<li>
+				<a href="completed">Completed</a>
+			</li>
+		</ul>
+	 <button id="clear-completed">
+          Clear completed (1)
+        </button>
+      </footer>
+
+    <!-- END OF FOOTER -->
+</section>
+
+
+
+    <footer id="info">
+      <p>Double-click to edit a todo</p>
+    </footer>
+
+<!-- TIME FOR THE JAVASCRIPTS -->
+
+<!-- END OF THE JAVASCRIPTS -->
+  </body>
